# AI_AUTO_TESTING

./: .env_example  .gitignore  CHANGELOG.md  README.md  manage.py  pyproject.toml  stagehand-qa-prompt-standard.md  stagehand_prompt_style_guide.md  worker.py
app/: __init__.py  config.py
app/decorators/: client.py
app/resources/: __init__.py  api.py  client.py  errors.py  exceptions.py  log.py
app/services/: hybrid_agent.py  main.py  smart_selector.py
app/testcase/: test_case.py
storage/: actions.json  cached_steps.json  data.json  steps.txt
storage/testcase/: create_backup_job_365.txt
