[tool.poetry]
name = "qa-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
names = "^0.3.0"
click = "^8.0.3"
flask = "^2.2.3"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
tenacity = "^8.2.3"
flask-restx = "^1.3.0"
stagehand = "^0.5.5"
google-generativeai = "^0.8.6"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
toml-sort = "^0.22.4"
black = "^23.1.0"
pytest = "^7.2.2"
isort = "^5.12.0"
ruff = "^0.0.254"
pylint = "^2.17.0"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 80
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.black]
exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist
      | Makefile
    )/
'''
line-length = 80
target-version = ["py311"]


[tool.pytest.ini_options]
addopts = [
    "-v", "--strict-markers"
]
testpaths = ["tests"]


[tool.codespell]
ignore-words-list = "regon"
skip = ".venv,.git,build,.egg-info"


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 80
target-version = "py311"

[tool.pylint.BASIC]
good-names = "id,i,j,k,e,ex"

[tool.pylint.DESIGN]
max-args = 10
max-attributes = 8

[tool.pylint.FORMAT]
max-line-length = 80

[tool.pylint."MESSAGES CONTROL"]
disable = "missing-docstring, line-too-long, logging-fstring-interpolation, duplicate-code"

[tool.pylint.MISCELLANEOUS]
notes = "FIXME,XXX,TODO"

[tool.pylint.SIMILARITIES]
ignore-comments = "yes"
ignore-docstrings = "yes"
min-similarity-lines = 6
